--- a/assets/package.json
+++ b/assets/package.json
@@ -75,6 +75,7 @@
 		"openai": "^3.2.1",
 		"recordrtc": "^5.6.2",
 		"sass": "^1.56.1",
+		"slim-select": "^2.6.0",
 		"sortablejs": "^1.15.0",
 		"sweetalert2": "^11.7.5",
 		"tippy.js": "^6.3.7",
