--- a/assets/package.json
+++ b/assets/package.json
@@ -73,6 +73,7 @@
 		"dompurify": "^3.0.3",
 		"flatpickr": "^4.6.13",
 		"openai": "^3.2.1",
+		"papaparse": "^5.4.1",
 		"recordrtc": "^5.6.2",
 		"sass": "^1.56.1",
 		"slim-select": "^2.6.0",
